changes after review

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1002,6 +1002,11 @@ h3
     border-radius: 10px
 .contact-item__icon
     display: none
+.contact-section
+    .container 
+        p 
+            margin-bottom: 7vw
+            margin-top: 7vw
 @import "media"
 
 
