contact page spaces

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -539,6 +539,11 @@
 		.h1 
 			br 
 				display: none
+	.contact-section
+		.container
+			p
+				margin-bottom: 0px
+				margin-top: 30px
 
 	
 		
