--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -185,6 +185,7 @@ p
 
   .name-wrapper
     background: #f32e3e
+    font-weight: 700
 
 .photo-item--2 .name-wrapper
   background: #E4358D
@@ -321,6 +322,7 @@ p
   -webkit-box-align: center
   -ms-flex-align: center
   align-items: center
+  font-weight: 700
 
   img
     width: 14px
@@ -336,7 +338,7 @@ p
   align-items: center
 
 .review__date
-  opacity: .6
+  opacity: 1
   margin-left: 2vw
 
 .review__text
@@ -366,7 +368,7 @@ p
 
 .footer__link
   display: block
-  color: #E4354A
+  color: #fff
   text-decoration: none
   text-align: center
   padding-bottom: 4.267vw
